tests/typing/bad/testfile-enum-5.rs



enum Bool {
    True,
    True,
}

struct Info {
    field : Bool,
}


fn main() {
    let x = Bool::True;
    match x {
        Bool::True => (),
        False => (),
    }
}